bynkc/tests/fixtures/positive/815_messages_icu_reordered_arms_non_regression/src/app/bundle.bynk
commons app.bundle

uses bynk.locale

---
message-bundles slice 3 (#878): `bynk.messages.format_mismatch` compares
format *kind*, not arm order or arm count — `pl`'s arms are written in a
different order than `en`'s reference, and `pl` declares an extra `few`
category `en` has no use for. Neither is a mismatch (Decision D/H): this
must compile with no diagnostics.
---
messages en @reference {
  "cart.count" => "You have {count, plural, one {# item} other {# items}}"
}

messages pl {
  "cart.count" => "Masz {count, plural, other {# elementu} one {# element} few {# elementy}}"
}
