bynkc/tests/fixtures/negative/489_messages_format_mismatch/src/bundle.bynk
commons bundle

uses bynk.locale

messages "en" @reference {
  "cart.count" => "You have {count, plural, one {# item} other {# items}}"
}

messages "fr" {
  "cart.count" => "{count} articles"
}
